# pheno_matcher_be_rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml
data/: gene_list.csv  term_list.csv
examples/: obo_to_bin.rs
src/: calc_scores.rs  calc_simpheny_score.rs  custom_jaccard_ic.rs  main.rs  population.rs
src/data/: info.txt
src/hpoAssociations/: genes_to_disease.txt  grabFromHPO.py  populateDB.py
