[package]
name = "pheno_matcher_be_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hpo = "0.8.3"
csv = "1.3.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3.6"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
statrs = "0.18.0"
rand = "0.9.2"
